--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -7,6 +7,7 @@
     width: 80%;
     max-width: 40rem;
     animation: fade-slide-up 0.3s ease-out forwards;
+    /* left: calc(50% - 20rem); */
 }
 
 .modal::backdrop {
